--- a/k8s/server.yaml
+++ b/k8s/server.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: FORREPLACE1235-webserver
-  namespace: FORREPLACE1235
+  name: barter-webserver
+  namespace: barter
   labels:
     app: apache
 spec:
@@ -21,26 +21,26 @@ spec:
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: FORREPLACE1235-secret
+              name: barter-secret
               key: userpassword
-        image: gcr.io/PROJECT123/FORREPLACE1235
+        image: gcr.io/pc-api-6479467557629758909-343/barter
         ports:
         - containerPort: 80
         volumeMounts:
-        - name: FORREPLACE1235-pvc-sym-m
+        - name: barter-pvc-sym-m
           mountPath: /var/www/upload/image
       volumes:
-      - name: FORREPLACE1235-pvc-sym-m
+      - name: barter-pvc-sym-m
         persistentVolumeClaim:
-          claimName: FORREPLACE1235-pvc-sym-uploud
+          claimName: barter-pvc-sym-uploud
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: FORREPLACE1235-web-service
-  namespace: FORREPLACE1235
+  name: barter-web-service
+  namespace: barter
   labels:
-    run: FORREPLACE1235-web-service
+    run: barter-web-service
 spec:
   type: LoadBalancer
   ports:
@@ -52,8 +52,8 @@ spec:
 apiVersion: v1                  
 kind: PersistentVolumeClaim     
 metadata:                       
-   name: FORREPLACE1235-pvc-sym-uploud
-   namespace: FORREPLACE1235
+   name: barter-pvc-sym-uploud
+   namespace: barter
 spec:                           
    accessModes:                  
    - ReadWriteOnce              
