--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -8,7 +8,7 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: test    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: turkish-app-test
+  DEPLOYMENT_NAME: barter
   IMAGE: static-site
   ORGANIZATION: yes-soft-de
   ENVREPO: environment-tools
