--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -101,6 +101,7 @@ config/jwt
 /public/bundles/
 /var/
 /vendor/
+.env
 ###< symfony/framework-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
