--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Get Flutter Packages tools
         run: |
-          cd ./flutter
+          cd ./app/barter
           flutter pub upgrade
           flutter packages pub run build_runner build --delete-conflicting-outputs
 
