--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,12 @@ FROM php:7.4-fpm AS vendor
 WORKDIR /tmp/
 COPY composer.json composer.json
 COPY composer.lock composer.lock
+Run composer require liip/imagine-bundle
+
+
 RUN apt update -y && apt install zip -y && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN  composer update 
 RUN composer update symfony/flex --no-plugins --no-scripts
-
 RUN composer install
 RUN composer require symfony/translation && composer require doctrine/annotations && composer require symfony/orm-pack
 
