--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.4-fpm AS vendor
 WORKDIR /tmp/
 COPY composer.json composer.json
 COPY composer.lock composer.lock
-Run composer require liip/imagine-bundle
+
 
 
 RUN apt update -y && apt install zip -y && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -10,6 +10,7 @@ RUN  composer update
 RUN composer update symfony/flex --no-plugins --no-scripts
 RUN composer install
 RUN composer require symfony/translation && composer require doctrine/annotations && composer require symfony/orm-pack
+RUN composer require liip/imagine-bundle
 
 FROM php:7.4-apache
 RUN apt-get update && apt-get install -y build-essential libssl-dev zlib1g-dev libpng-dev libjpeg-dev libfreetype6-dev
