fix conflect between flysystem and liipImagin

--- a/backend/config/packages/oneup_flysystem.yaml
+++ b/backend/config/packages/oneup_flysystem.yaml
@@ -3,11 +3,11 @@ oneup_flysystem:
     adapters:
         default_adapter:
             local:
-                directory: '%kernel.project_dir%/../%upload_dir_name%/'
+                location: '%kernel.project_dir%/../%upload_dir_name%/'
 
         resolve_adapter:
             local:
-                directory: '%kernel.project_dir%/../%upload_dir_name%/%image_folder%/%original_image%'
+                location: '%kernel.project_dir%/../%upload_dir_name%/%image_folder%/%original_image%'
 
     filesystems:
         default_filesystem:
