--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,8 +12,9 @@
         "doctrine/orm": "^2.7",
         "gedmo/doctrine-extensions": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
+        "league/flysystem": "2.0",
         "lexik/jwt-authentication-bundle": "^2.8",
-        "liip/imagine-bundle": "^2.5",
+        "liip/imagine-bundle": "2.x-dev",
         "mark-gerarts/automapper-plus-bundle": "^1.3",
         "nelmio/cors-bundle": "^2.1",
         "oneup/flysystem-bundle": "^4.0",
@@ -21,7 +22,7 @@
         "stof/doctrine-extensions-bundle": "^1.5",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.12",
         "symfony/framework-bundle": "5.1.*",
         "symfony/lock": "5.1.*",
         "symfony/mailer": "5.1.*",
