--- a/backend/config/validator/validation.yaml
+++ b/backend/config/validator/validation.yaml
@@ -9,3 +9,15 @@ App\Request\UserProfileCreateRequest:
   properties:
     userName:
       - NotBlank: ~
+
+App\Request\ServiceCreateRequest:
+  properties:
+    serviceTitle:
+      - NotBlank: ~
+    categoryID:
+      - NotBlank: ~
+
+App\Request\ServiceUpdateRequest:
+  properties:
+    id:
+      - NotBlank: ~
