--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup flutter
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: "1.22.5"
+          flutter-version: "1.22.4"
           channel: "stable"
 
       - name: Install NDK
@@ -55,10 +55,14 @@ jobs:
         env:
           FIREBASE_CONFIG: ${{secrets.FIREBASE_CONFIG}}
 
+      - name: Upgrade Flutter 
+        run: |
+          flutter upgrade
+
       - name: Get Flutter Packages tools
         run: |
           cd ./app/barter
-          flutter pub upgrade
+          flutter pub get
           flutter packages pub run build_runner build --delete-conflicting-outputs
 
       - name: Install bundle
