role heirarchy was being set

--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -1,4 +1,7 @@
 security:
+    role_hierarchy:
+        ROLE_COMPANY: ROLE_USER
+
     encoders:
         App\Entity\UserEntity:
             algorithm: auto
