--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -58,6 +58,8 @@ jobs:
       - name: Upgrade Flutter 
         run: |
           flutter upgrade
+          flutter downgrade 1.22.5
+          flutter doctor
 
       - name: Get Flutter Packages tools
         run: |
@@ -89,7 +91,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.run_number }}
+          tag_name: debug_${{ github.run_number }}
           asset_path: app/barter/build/app/outputs/flutter-apk/app-release.apk
           asset_name: release.apk
           asset_content_type: application/zip
