--- a/app/barter/android/app/src/main/AndroidManifest.xml
+++ b/app/barter/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.yessoft.barter">
+    package="de.yessoft.barternew">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -8,7 +8,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="barter"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ture">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
