--- a/app/barter/pubspec.yaml
+++ b/app/barter/pubspec.yaml
@@ -111,6 +111,9 @@ dependencies:
   # ProgressBar
   step_progress_indicator: ^0.2.5+8
 
+  # pageIndicator
+  page_indicator: ^0.1.3+1
+
   # Maps and Locations
   flutter_map: ^0.10.1+1
   latlong: ^0.6.1
@@ -129,6 +132,7 @@ dependencies:
   lottie: ^0.7.0+1
   flare_flutter: ^2.0.6
 
+  change_app_package_name: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -159,11 +163,11 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
-
+    - assets/icon/
 flutter_intl:
   enabled: true
 
 flutter_icons:
-  android: "launcher_icon"
+  android: ture
   ios: true
-  image_path: "assets/images/icon.jpg"
+  image_path: "assets/icon/logo.png"
