--- a/backend/config/validator/validation.yaml
+++ b/backend/config/validator/validation.yaml
@@ -21,3 +21,10 @@ App\Request\ServiceUpdateRequest:
   properties:
     id:
       - NotBlank: ~
+
+App\Request\SwapCreateRequest:
+  properties:
+    userIdOne:
+      - NotBlank: ~
+    userIdTwo:
+      - NotBlank: ~
