The work on the swap service has ended

--- a/app/barter/pubspec.yaml
+++ b/app/barter/pubspec.yaml
@@ -156,7 +156,7 @@ dev_dependencies:
   lang_table: 0.2.0
 
   # Flutter Toast
-  fluttertoast: ^3.0.4
+  #fluttertoast: any
 
 
   # Icons Generator
